<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basic_background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/home_guild_line_upper_limit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <ImageView
        android:id="@+id/home_img_upper_bk"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/home_upper_bk"
        app:layout_constraintBottom_toTopOf="@+id/home_guild_line_upper_limit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/home_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/home_lay_info_area"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/home_lay_btn_setting"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="24dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/home_txt_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_txt_title">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_settings" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/home_lay_info_area"
        android:layout_width="0dp"
        android:layout_height="108dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/basic_card_background"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/home_guild_line_upper_limit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_txt_title"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/home_txt_store_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/home_store_bk"
                android:paddingStart="12dp"
                android:paddingTop="2dp"
                android:paddingEnd="12dp"
                android:paddingBottom="2dp"
                android:text="@string/home_info_store_title_info"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/home_txt_btn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="4dp"
                android:text="@string/home_info_btn_more"
                android:textColor="?colorPrimary"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/home_txt_store_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/home_txt_store_title" />

            <LinearLayout
                android:id="@+id/home_lay_btn_promo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/home_lay_btn_cart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_txt_store_title">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_store_info_promo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/home_store_promo"
                    android:textColor="@color/basic_text"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:alpha="0.2"
                android:background="@color/basic_text"
                app:layout_constraintBottom_toBottomOf="@+id/home_lay_btn_promo"
                app:layout_constraintEnd_toStartOf="@+id/home_lay_btn_cart"
                app:layout_constraintStart_toEndOf="@+id/home_lay_btn_promo"
                app:layout_constraintTop_toTopOf="@+id/home_lay_btn_promo" />

            <LinearLayout
                android:id="@+id/home_lay_btn_cart"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/home_lay_btn_store"
                app:layout_constraintStart_toEndOf="@+id/home_lay_btn_promo"
                app:layout_constraintTop_toBottomOf="@+id/home_txt_store_title">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_store_info_cart" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/home_store_cart"
                    android:textColor="@color/basic_text"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:alpha="0.2"
                android:background="@color/basic_text"
                app:layout_constraintBottom_toBottomOf="@+id/home_lay_btn_cart"
                app:layout_constraintEnd_toStartOf="@+id/home_lay_btn_store"
                app:layout_constraintStart_toEndOf="@+id/home_lay_btn_cart"
                app:layout_constraintTop_toTopOf="@+id/home_lay_btn_cart" />

            <LinearLayout
                android:id="@+id/home_lay_btn_store"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/home_lay_btn_cart"
                app:layout_constraintTop_toBottomOf="@+id/home_txt_store_title">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_store_info_store" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/home_store_store"
                    android:textColor="@color/basic_text"
                    android:textSize="14sp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_recycle_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_guild_line_upper_limit"
        tools:listitem="@layout/row_home_list_item" />

    <FrameLayout
        android:id="@+id/home_lay_loading_area"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_guild_line_upper_limit">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>